--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "merge-descriptors": "^1.0.1",
     "mongoose": "^4.8.5",
     "morgan": "~1.7.0",
+    "request": "^2.79.0",
     "serve-favicon": "~2.3.2"
   }
 }
