底层框架再次调动   1.可控的server层。   2.TODO 高阶JavaScript的使用。
完成 树形结构 js算法的实现

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 *.tmp
 *.temp
 
-node_modules
+node_modules/
 npm-debug.log
 
 temp/
@@ -16,6 +16,4 @@ UI/
 
 log/
 
-server/public/
-server/views/
-server/serverConfig/server/
+server/
