--- a/hock/warehouseConfiguration/warehouseConfiguration.json
+++ b/hock/warehouseConfiguration/warehouseConfiguration.json
@@ -1,116 +1,102 @@
 [
   {
-    "ArehouseId": "id",
-    "Name": "仓库名称",
-    "Addr": "仓库地址",
-    "Scity": "所在地市",
-    "Scontacts": "联系人",
-    "Phone": "电话",
-    "Acreage": "面积",
-    "Ctype": "仓库类型",
-    "Humidity": "相对湿度",
-    "Fax": "传真",
-    "Postoffice": "邮编",
-    "Isti": "是否需要维护ti值",
-    "Status": "状态",
-    "ClientId": "客户id",
-    "Remarks": "备注",
-    "Pgroupinfo": "平面图信息",
-    "Createtime": "创建时间"
+    "baArehouseId": "id",
+    "baName": "仓库名称",
+    "baAddr": "仓库地址",
+    "baScity": "所在地市",
+    "baScontacts": "联系人",
+    "baPhone": "电话",
+    "baAcreage": "面积",
+    "baCtype": "仓库类型",
+    "baHumidity": "相对湿度",
+    "baFax": "传真",
+    "baPostoffice": "邮编",
+    "baIsti": "是否需要维护ti值",
+    "baStatus": "状态",
+    "baClientId": "客户id",
+    "baRemarks": "备注",
+    "baCreatetime": "创建时间",
+    "baPgroupinfo": "平面图信息"
   },
-  {
-    "ArehouseId": "id",
-    "Name": "仓库名称",
-    "Addr": "仓库地址",
-    "Scity": "所在地市",
-    "Scontacts": "联系人",
-    "Phone": "电话",
-    "Acreage": "面积",
-    "Ctype": "仓库类型",
-    "Humidity": "相对湿度",
-    "Fax": "传真",
-    "Postoffice": "邮编",
-    "Isti": "是否需要维护ti值",
-    "Status": "状态",
-    "ClientId": "客户id",
-    "Remarks": "备注",
-    "Pgroupinfo": "平面图信息",
-    "Createtime": "创建时间"
+ {
+    "baArehouseId": "id",
+    "baName": "仓库名称",
+    "baAddr": "仓库地址",
+    "baScity": "所在地市",
+    "baScontacts": "联系人",
+    "baPhone": "电话",
+    "baAcreage": "面积",
+    "baCtype": "仓库类型",
+    "baHumidity": "相对湿度",
+    "baFax": "传真",
+    "baPostoffice": "邮编",
+    "baIsti": "是否需要维护ti值",
+    "baStatus": "状态",
+    "baClientId": "客户id",
+    "baRemarks": "备注",
+    "baCreatetime": "创建时间",
+    "baPgroupinfo": "平面图信息"
   },
-  {
-    "ArehouseId": "id",
-    "Name": "仓库名称",
-    "Addr": "仓库地址",
-    "Scity": "所在地市",
-    "Scontacts": "联系人",
-    "Phone": "电话",
-    "Acreage": "面积",
-    "Ctype": "仓库类型",
-    "Humidity": "相对湿度",
-    "Fax": "传真",
-    "Postoffice": "邮编",
-    "Isti": "是否需要维护ti值",
-    "Status": "状态",
-    "ClientId": "客户id",
-    "Remarks": "备注",
-    "Pgroupinfo": "平面图信息",
-    "Createtime": "创建时间"
+ {
+    "baArehouseId": "id",
+    "baName": "仓库名称",
+    "baAddr": "仓库地址",
+    "baScity": "所在地市",
+    "baScontacts": "联系人",
+    "baPhone": "电话",
+    "baAcreage": "面积",
+    "baCtype": "仓库类型",
+    "baHumidity": "相对湿度",
+    "baFax": "传真",
+    "baPostoffice": "邮编",
+    "baIsti": "是否需要维护ti值",
+    "baStatus": "状态",
+    "baClientId": "客户id",
+    "baRemarks": "备注",
+    "baCreatetime": "创建时间",
+    "baPgroupinfo": "平面图信息"
   },
-  {
-    "ArehouseId": "id",
-    "Name": "仓库名称",
-    "Addr": "仓库地址",
-    "Scity": "所在地市",
-    "Scontacts": "联系人",
-    "Phone": "电话",
-    "Acreage": "面积",
-    "Ctype": "仓库类型",
-    "Humidity": "相对湿度",
-    "Fax": "传真",
-    "Postoffice": "邮编",
-    "Isti": "是否需要维护ti值",
-    "Status": "状态",
-    "ClientId": "客户id",
-    "Remarks": "备注",
-    "Pgroupinfo": "平面图信息",
-    "Createtime": "创建时间"
+ {
+    "baArehouseId": "id",
+    "baName": "仓库名称",
+    "baAddr": "仓库地址",
+    "baScity": "所在地市",
+    "baScontacts": "联系人",
+    "baPhone": "电话",
+    "baAcreage": "面积",
+    "baCtype": "仓库类型",
+    "baHumidity": "相对湿度",
+    "baFax": "传真",
+    "baPostoffice": "邮编",
+    "baIsti": "是否需要维护ti值",
+    "baStatus": "状态",
+    "baClientId": "客户id",
+    "baRemarks": "备注",
+    "baCreatetime": "创建时间",
+    "baPgroupinfo": "平面图信息"
   },
-  {
-    "ArehouseId": "id",
-    "Name": "仓库名称",
-    "Addr": "仓库地址",
-    "Scity": "所在地市",
-    "Scontacts": "联系人",
-    "Phone": "电话",
-    "Acreage": "面积",
-    "Ctype": "仓库类型",
-    "Humidity": "相对湿度",
-    "Fax": "传真",
-    "Postoffice": "邮编",
-    "Isti": "是否需要维护ti值",
-    "Status": "状态",
-    "ClientId": "客户id",
-    "Remarks": "备注",
-    "Pgroupinfo": "平面图信息",
-    "Createtime": "创建时间"
-  },
-  {
-    "ArehouseId": "id",
-    "Name": "仓库名称",
-    "Addr": "仓库地址",
-    "Scity": "所在地市",
-    "Scontacts": "联系人",
-    "Phone": "电话",
-    "Acreage": "面积",
-    "Ctype": "仓库类型",
-    "Humidity": "相对湿度",
-    "Fax": "传真",
-    "Postoffice": "邮编",
-    "Isti": "是否需要维护ti值",
-    "Status": "状态",
-    "ClientId": "客户id",
-    "Remarks": "备注",
-    "Pgroupinfo": "平面图信息",
-    "Createtime": "创建时间"
+ {
+    "baArehouseId": "id",
+    "baName": "仓库名称",
+    "baAddr": "仓库地址",
+    "baScity": "所在地市",
+    "baScontacts": "联系人",
+    "baPhone": "电话",
+    "baAcreage": "面积",
+    "baCtype": "仓库类型",
+    "baHumidity": "相对湿度",
+    "baFax": "传真",
+    "baPostoffice": "邮编",
+    "baIsti": "是否需要维护ti值",
+    "baStatus": "状态",
+    "baClientId": "客户id",
+    "baRemarks": "备注",
+    "baCreatetime": "创建时间",
+    "baPgroupinfo": "平面图信息"
   }
+
+
+
+
+
 ]
