调整仓库虚拟数据

--- a/hock/warehouseConfiguration/warehouseConfiguration.json
+++ b/hock/warehouseConfiguration/warehouseConfiguration.json
@@ -1,102 +1,99 @@
-[
-  {
-    "baArehouseId": "id",
-    "baName": "仓库名称",
-    "baAddr": "仓库地址",
-    "baScity": "所在地市",
-    "baScontacts": "联系人",
-    "baPhone": "电话",
-    "baAcreage": "面积",
-    "baCtype": "仓库类型",
-    "baHumidity": "相对湿度",
-    "baFax": "传真",
-    "baPostoffice": "邮编",
-    "baIsti": "是否需要维护ti值",
-    "baStatus": "状态",
-    "baClientId": "客户id",
-    "baRemarks": "备注",
-    "baCreatetime": "创建时间",
-    "baPgroupinfo": "平面图信息"
-  },
- {
-    "baArehouseId": "id",
-    "baName": "仓库名称",
-    "baAddr": "仓库地址",
-    "baScity": "所在地市",
-    "baScontacts": "联系人",
-    "baPhone": "电话",
-    "baAcreage": "面积",
-    "baCtype": "仓库类型",
-    "baHumidity": "相对湿度",
-    "baFax": "传真",
-    "baPostoffice": "邮编",
-    "baIsti": "是否需要维护ti值",
-    "baStatus": "状态",
-    "baClientId": "客户id",
-    "baRemarks": "备注",
-    "baCreatetime": "创建时间",
-    "baPgroupinfo": "平面图信息"
-  },
- {
-    "baArehouseId": "id",
-    "baName": "仓库名称",
-    "baAddr": "仓库地址",
-    "baScity": "所在地市",
-    "baScontacts": "联系人",
-    "baPhone": "电话",
-    "baAcreage": "面积",
-    "baCtype": "仓库类型",
-    "baHumidity": "相对湿度",
-    "baFax": "传真",
-    "baPostoffice": "邮编",
-    "baIsti": "是否需要维护ti值",
-    "baStatus": "状态",
-    "baClientId": "客户id",
-    "baRemarks": "备注",
-    "baCreatetime": "创建时间",
-    "baPgroupinfo": "平面图信息"
-  },
- {
-    "baArehouseId": "id",
-    "baName": "仓库名称",
-    "baAddr": "仓库地址",
-    "baScity": "所在地市",
-    "baScontacts": "联系人",
-    "baPhone": "电话",
-    "baAcreage": "面积",
-    "baCtype": "仓库类型",
-    "baHumidity": "相对湿度",
-    "baFax": "传真",
-    "baPostoffice": "邮编",
-    "baIsti": "是否需要维护ti值",
-    "baStatus": "状态",
-    "baClientId": "客户id",
-    "baRemarks": "备注",
-    "baCreatetime": "创建时间",
-    "baPgroupinfo": "平面图信息"
-  },
- {
-    "baArehouseId": "id",
-    "baName": "仓库名称",
-    "baAddr": "仓库地址",
-    "baScity": "所在地市",
-    "baScontacts": "联系人",
-    "baPhone": "电话",
-    "baAcreage": "面积",
-    "baCtype": "仓库类型",
-    "baHumidity": "相对湿度",
-    "baFax": "传真",
-    "baPostoffice": "邮编",
-    "baIsti": "是否需要维护ti值",
-    "baStatus": "状态",
-    "baClientId": "客户id",
-    "baRemarks": "备注",
-    "baCreatetime": "创建时间",
-    "baPgroupinfo": "平面图信息"
-  }
-
-
-
-
-
-]
+{
+  "data": [
+    {
+      "baArehouseId": "id",
+      "baName": "仓库名称",
+      "baAddr": "仓库地址",
+      "baScity": "所在地市",
+      "baScontacts": "联系人",
+      "baPhone": "电话",
+      "baAcreage": "面积",
+      "baCtype": "仓库类型",
+      "baHumidity": "相对湿度",
+      "baFax": "传真",
+      "baPostoffice": "邮编",
+      "baIsti": "是否需要维护ti值",
+      "baStatus": "状态",
+      "baClientId": "客户id",
+      "baRemarks": "备注",
+      "baCreatetime": "创建时间",
+      "baPgroupinfo": "平面图信息"
+    },
+    {
+      "baArehouseId": "id",
+      "baName": "仓库名称",
+      "baAddr": "仓库地址",
+      "baScity": "所在地市",
+      "baScontacts": "联系人",
+      "baPhone": "电话",
+      "baAcreage": "面积",
+      "baCtype": "仓库类型",
+      "baHumidity": "相对湿度",
+      "baFax": "传真",
+      "baPostoffice": "邮编",
+      "baIsti": "是否需要维护ti值",
+      "baStatus": "状态",
+      "baClientId": "客户id",
+      "baRemarks": "备注",
+      "baCreatetime": "创建时间",
+      "baPgroupinfo": "平面图信息"
+    },
+    {
+      "baArehouseId": "id",
+      "baName": "仓库名称",
+      "baAddr": "仓库地址",
+      "baScity": "所在地市",
+      "baScontacts": "联系人",
+      "baPhone": "电话",
+      "baAcreage": "面积",
+      "baCtype": "仓库类型",
+      "baHumidity": "相对湿度",
+      "baFax": "传真",
+      "baPostoffice": "邮编",
+      "baIsti": "是否需要维护ti值",
+      "baStatus": "状态",
+      "baClientId": "客户id",
+      "baRemarks": "备注",
+      "baCreatetime": "创建时间",
+      "baPgroupinfo": "平面图信息"
+    },
+    {
+      "baArehouseId": "id",
+      "baName": "仓库名称",
+      "baAddr": "仓库地址",
+      "baScity": "所在地市",
+      "baScontacts": "联系人",
+      "baPhone": "电话",
+      "baAcreage": "面积",
+      "baCtype": "仓库类型",
+      "baHumidity": "相对湿度",
+      "baFax": "传真",
+      "baPostoffice": "邮编",
+      "baIsti": "是否需要维护ti值",
+      "baStatus": "状态",
+      "baClientId": "客户id",
+      "baRemarks": "备注",
+      "baCreatetime": "创建时间",
+      "baPgroupinfo": "平面图信息"
+    },
+    {
+      "baArehouseId": "id",
+      "baName": "仓库名称",
+      "baAddr": "仓库地址",
+      "baScity": "所在地市",
+      "baScontacts": "联系人",
+      "baPhone": "电话",
+      "baAcreage": "面积",
+      "baCtype": "仓库类型",
+      "baHumidity": "相对湿度",
+      "baFax": "传真",
+      "baPostoffice": "邮编",
+      "baIsti": "是否需要维护ti值",
+      "baStatus": "状态",
+      "baClientId": "客户id",
+      "baRemarks": "备注",
+      "baCreatetime": "创建时间",
+      "baPgroupinfo": "平面图信息"
+    }
+  ]
+}
