修改仓库配置的bug

--- a/hock/warehouseConfiguration/warehouseConfiguration.json
+++ b/hock/warehouseConfiguration/warehouseConfiguration.json
@@ -27,7 +27,7 @@
       "baScontacts": "联系人",
       "baPhone": "电话",
       "baAcreage": "面积",
-      "baCtype": "仓库类型",
+      "baCtype": "1",
       "baHumidity": "相对湿度",
       "baFax": "传真",
       "baPostoffice": "邮编",
@@ -46,7 +46,7 @@
       "baScontacts": "联系人",
       "baPhone": "电话",
       "baAcreage": "面积",
-      "baCtype": "仓库类型",
+      "baCtype": "2",
       "baHumidity": "相对湿度",
       "baFax": "传真",
       "baPostoffice": "邮编",
@@ -65,7 +65,7 @@
       "baScontacts": "联系人",
       "baPhone": "电话",
       "baAcreage": "面积",
-      "baCtype": "仓库类型",
+      "baCtype": "1",
       "baHumidity": "相对湿度",
       "baFax": "传真",
       "baPostoffice": "邮编",
@@ -84,7 +84,7 @@
       "baScontacts": "联系人",
       "baPhone": "电话",
       "baAcreage": "面积",
-      "baCtype": "仓库类型",
+      "baCtype": "2",
       "baHumidity": "相对湿度",
       "baFax": "传真",
       "baPostoffice": "邮编",
